# fetchopencv

./: CMakeLists.txt  build.sh
cmake/: opencv.cmake  opencv_4.6.0.cmake
src/: main.cpp
